--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>641</width>
-    <height>300</height>
+    <width>1237</width>
+    <height>620</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,13 +30,13 @@
      <string>T1</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho1">
+   <widget class="QLabel" name="R0">
     <property name="geometry">
      <rect>
       <x>80</x>
       <y>30</y>
-      <width>250</width>
-      <height>17</height>
+      <width>137</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -46,13 +46,13 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho2">
+   <widget class="QLabel" name="R3">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>150</y>
-      <width>250</width>
-      <height>17</height>
+      <y>146</y>
+      <width>137</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -62,10 +62,10 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho3">
+   <widget class="QLabel" name="R1">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>217</x>
       <y>30</y>
       <width>21</width>
       <height>137</height>
@@ -78,7 +78,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho4">
+   <widget class="QLabel" name="R5">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -97,8 +97,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>180</y>
+      <x>180</x>
+      <y>370</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -110,8 +110,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>180</y>
+      <x>300</x>
+      <y>370</y>
       <width>98</width>
       <height>27</height>
      </rect>
@@ -120,10 +120,10 @@
      <string>Parar</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho4_2">
+   <widget class="QLabel" name="R4">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>375</x>
       <y>30</y>
       <width>21</width>
       <height>137</height>
@@ -136,13 +136,13 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho1_2">
+   <widget class="QLabel" name="R2">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>238</x>
       <y>30</y>
-      <width>250</width>
-      <height>17</height>
+      <width>137</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -152,13 +152,13 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_trilho2_2">
+   <widget class="QLabel" name="R6">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>150</y>
-      <width>250</width>
-      <height>17</height>
+      <x>238</x>
+      <y>146</y>
+      <width>137</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -171,7 +171,7 @@
    <widget class="QLabel" name="label_trem2">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>270</x>
       <y>30</y>
       <width>21</width>
       <height>17</height>
@@ -184,24 +184,228 @@
      <string>T2</string>
     </property>
    </widget>
-   <zorder>label_trilho1</zorder>
-   <zorder>label_trilho2</zorder>
-   <zorder>label_trilho3</zorder>
-   <zorder>label_trilho4</zorder>
+   <widget class="QLabel" name="R9">
+    <property name="geometry">
+     <rect>
+      <x>396</x>
+      <y>146</y>
+      <width>137</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R7">
+    <property name="geometry">
+     <rect>
+      <x>396</x>
+      <y>30</y>
+      <width>137</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R8">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>30</y>
+      <width>21</width>
+      <height>137</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R10">
+    <property name="geometry">
+     <rect>
+      <x>294</x>
+      <y>167</y>
+      <width>21</width>
+      <height>137</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R13">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>167</y>
+      <width>21</width>
+      <height>137</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R12">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>167</y>
+      <width>21</width>
+      <height>137</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R11">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>283</y>
+      <width>214</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R14">
+    <property name="geometry">
+     <rect>
+      <x>315</x>
+      <y>283</y>
+      <width>215</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: yellow}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_trem3">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>30</y>
+      <width>21</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: red}</string>
+    </property>
+    <property name="text">
+     <string>T3</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_trem4">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>220</y>
+      <width>21</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: red}</string>
+    </property>
+    <property name="text">
+     <string>T4</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_trem5">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>150</y>
+      <width>21</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: red}</string>
+    </property>
+    <property name="text">
+     <string>T5</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_trem6">
+    <property name="geometry">
+     <rect>
+      <x>232</x>
+      <y>285</y>
+      <width>21</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel { background: red}</string>
+    </property>
+    <property name="text">
+     <string>T6</string>
+    </property>
+   </widget>
+   <zorder>R0</zorder>
+   <zorder>R3</zorder>
+   <zorder>R1</zorder>
+   <zorder>R5</zorder>
    <zorder>label_trem1</zorder>
    <zorder>pushButton</zorder>
    <zorder>pushButton_2</zorder>
-   <zorder>label_trilho4_2</zorder>
-   <zorder>label_trilho1_2</zorder>
-   <zorder>label_trilho2_2</zorder>
+   <zorder>R4</zorder>
+   <zorder>R2</zorder>
+   <zorder>R6</zorder>
    <zorder>label_trem2</zorder>
+   <zorder>R9</zorder>
+   <zorder>R7</zorder>
+   <zorder>R8</zorder>
+   <zorder>R10</zorder>
+   <zorder>R13</zorder>
+   <zorder>R12</zorder>
+   <zorder>R11</zorder>
+   <zorder>R14</zorder>
+   <zorder>label_trem3</zorder>
+   <zorder>label_trem4</zorder>
+   <zorder>label_trem5</zorder>
+   <zorder>label_trem6</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>641</width>
+     <width>1237</width>
      <height>22</height>
     </rect>
    </property>
